# SP_CW_4SEM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/catalog/: README.md  schema.h
src/core/: README.md  exceptions.h  types.h
src/execution/: README.md
src/index/: README.md
src/parser/: README.md
src/storage/: README.md
